# ClimeMate

./: .gitignore  .vercelignore  README.md  components.json  index.html  next.config.js  package-lock.json  package.json
arcium-mpc/: Anchor.toml  Arcium.toml  package.json
arcium-mpc/artifacts/: circuits_hash.txt
arcium-mpc/programs/climemate-mpc/: Cargo.toml
arcium-mpc/programs/climemate-mpc/src/: lib.rs
co2e-escrow/: Anchor.toml  package.json
co2e-escrow/scripts/: 1-transfer-to-multisig.ts  2-multisig-to-escrow.ts  3-update-admin-to-multisig.ts  fund-escrow.ts  initialize-escrow.ts  test-purchase.ts  transfer-to-escrow.ts
co2e-escrow/tests/: co2e-escrow.ts
migrations/: add_arcium_privacy_fields.sql  add_isprivate_to_blockchain_logs.sql  add_points_redemption.sql  add_sema_privacy_setting.sql  add_virtual_land_ownership.sql  add_virtual_world.sql  add_virtual_world_standalone.sql
prisma/: schema.prisma
src/: App.tsx
src/app/: globals.css  layout.tsx
src/components/: providers.tsx
src/contexts/: DataPersistenceContext.tsx
src/data/: achievements-catalog.ts  rewards-catalog.ts
src/hooks/: useAchievementNotifications.tsx  useAchievements.tsx  useAuth.ts  useChargingClaim.ts  useChargingRewards.ts  useEscrow.ts  useRetirement.tsx  useUserSync.ts  useVirtualPlots.tsx  useVirtualProfile.tsx  useWalletRequired.ts
src/lib/: arcium-certificates.ts  arcium-sema.ts  blockchain-logger.ts  chargemap-nft.ts  chargemap-payments.ts  charging-rewards.ts  co2e-escrow.ts  co2e-retirement.ts  co2e-token.ts  decharge-integration.ts  memo-transaction.ts  prisma.ts  (+3 more)
(+116 files in other folders)
