[package]
name = "climemate-mpc"
version = "0.1.0"
description = "ClimeMate MPC Program for private emissions certificates"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "climemate_mpc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

arcium-client = { version = "0.3.0", default-features = false }
arcium-macros = { version = "0.3.0" }
arcium-anchor = { version = "0.3.0" }
